--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html>
   <head> 로고스(logos)</head>
   <body>
+    <header>
+      <!-- 헤더에 해당되는 콘텐츠 위치-->
+      테스트
+    </header>
+
+    <nav>
+      <!-- 내비게이션 메뉴-->
+    </nav>
+
+    <aside id="left">
+      <!-- 왼쪽 사이트 체크-->
+    </aside>
+
+    <section>
+        <!-- 중간 체크-->
+      <article>
+        중간 체크
+      </article>
+    </section>
+    
+    <aside id="right">
+      <!-- 오른쪽 사이트 체크-->
+    </aside>
+
+    
       <form>
         <fieldset>
           <legend>야훼이레란?</legend>
