--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head> 로고스(logos)</head>
+  <head> 
+	<title>로고스(logos) 모임</title>
+	<meta charset="utf-8">
+	<style>
+		h1{
+			background-color: yellow;
+			border: 2px solid red;
+		}
+	</style>
+  </head>
+  
   <body>
     <header>
       <!-- 헤더에 해당되는 콘텐츠 위치-->
-      테스트
+      <h1><a href="index.html">작성자 : 로이신</a></h1>
     </header>
 
     <nav>
       <!-- 내비게이션 메뉴-->
+	
+	  
+	  
     </nav>
 
     <aside id="left">
