--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
-	<title>로고스(logos) 모임</title>
+	<title>로고스(logos) 선곡</title>
 	<meta charset="utf-8">
   </head>
   
