--- a/index.html
+++ b/index.html
@@ -3,6 +3,43 @@
   <head> 
 	<title>로고스(logos) 선곡</title>
 	<meta charset="utf-8">
+	
+	<style>
+	
+		ul{
+			list-style: none;
+			text-align: center;
+			border-top: 1px solid green;
+			border-bottom: 1px solid green;
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr 1fr;
+			}
+		ul li{
+			display:inline;
+			text-transform:uppercase;
+			padding: 0 40px;
+			letter-spacing: 8px;
+			}
+		ul li a {
+			text-decoration: none;
+			color: black;
+			}
+		ul li a:hover {
+			text-decoration: underline;
+			}
+
+	</style>
+	
+	<nav>
+		
+		<ul>
+			<li><h1><a href="index.html">HOME		</a></h1></li>
+			<li><h3>야훼이레(미사곡)		</h3></li>
+			<li><h1>떼제		</h1></li>
+			<li><h3>야훼이레(전례곡)		</h3></li>
+		</ul>
+	
+	</nav>
   </head>
   
   <body>
@@ -47,4 +84,9 @@
 	  
   
   </body>  
+  
+  <footer>
+	<p> [작성] 로이신 [문의] : roy.shin926@gmail.com
+  </footer>
+  
 </html>
