--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<nav>
 		
 		<ul>
-			<li><h1><a href="index.html" target="_blank">HOME		</a></h1></li>
+			<li><h1><a href="index.html">HOME		</a></h1></li>
 			<li><h3>야훼이레(미사곡)		</h3></li>
 			<li><h1><a href="Taizé.html" target="_blank">떼제		</a></h1></li>
 			<li><h3>야훼이레(전례곡)		</h3></li>
