--- a/Taizé.html
+++ b/Taizé.html
@@ -5,7 +5,13 @@
 	<meta charset="utf-8">
 	
 	<style>
+		/* 신문처럼 레이아웃 구성*/	
+		.news-columns{
+			column-count: 2;
+			column-gap: 40px;
+		}
 	
+		/* 메뉴 코드작성*/
 		ul{
 			list-style: none;
 			text-align: center;
@@ -66,13 +72,39 @@
 			
 			
 		</fieldset>
+		
 		<br>
-      <fieldset>		
+		
+		<fieldset>		
 		   <legend>[야훼이레] 수록곡</legend>
-			<p>[야훼이레] 655. 영원한 사랑 </P>
-						
-			<p>[야훼이레] 576. 사랑 이 한마디만을 </P>
 			
+			<div class="news-columns">
+						
+				<p>217. 주님의 평화</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=WmBbpSuKjVb88Qmw&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>216. 주님의 자비를</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=TAUw9n3peaeLRmNB&amp;start=246" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>195. 아버지 당신 손에</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=qlLZiDz5HB4KqiIz&amp;start=771" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>228. 주여 평화를 주소서</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=NrGJA7vxmRO9GIty&amp;start=1318" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>206. 우리 곁에 머무소서</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=WaiWNhKAdDxOfyEB&amp;start=2293" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>190. 두려워 말라</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=NVY5fcgHb8sR4PBv&amp;start=2563" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>230. 주 찬미하여라</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=8kreWUVqmiW2CGC-&amp;start=2813" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>213. 주님은 빛이시니</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=fmKLu_wNYntfWupi&amp;start=3817" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>231. 찬미하여라</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=naadNybZ0Sa9UA3U&amp;start=4421" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>185. 내 맘 속을</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=jS8YI-jmxYmh7HBR&amp;start=4737" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>202. 오소서 성령이여</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=RRTXtw-RO5dO4K_G&amp;start=5556" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>195. 아버지 당신 손에</p>
+				<iframe width="200" height="150" src="https://www.youtube.com/embed/7KLC0J12psE?si=VJrKOG-tM3JIz9Hf&amp;start=5833" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 		</fieldset>
 		
 			
