--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<ul>
 			<li><h1><a href="index.html">HOME		</a></h1></li>
-			<li><h3>야훼이레(미사곡)		</h3></li>
+			<li><h3><a href="YahwehYireh.html" target="_blank">야훼이레(미사곡)		</a></h3></li>
 			<li><h1><a href="Taizé.html" target="_blank">떼제		</a></h1></li>
 			<li><h3>야훼이레(전례곡)		</h3></li>
 		</ul>
