--- a/YahwehYireh.html
+++ b/YahwehYireh.html
@@ -5,7 +5,12 @@
 	<meta charset="utf-8">
 	
 	<style>
-	
+		/* 신문처럼 레이아웃 구성*/	
+		.news-columns{
+			column-count: 2;
+			column-gap: 40px;
+		}
+		
 		ul{
 			list-style: none;
 			text-align: center;
@@ -27,6 +32,18 @@
 		ul li a:hover {
 			text-decoration: underline;
 			}
+		.pretty-title {
+		   display: inline-block;
+		   padding: 5px 10px;
+		   background: linear-gradient(90deg, #ffe082 0%, #ffb347 100%);
+		   color: #3d2c00;
+		   font-size: 1.9em;
+		   font-weight: bold;
+		   border-radius: 15px;
+		   box-shadow: 0 6px 24px rgba(0,0,0,0.13);
+		   letter-spacing: 2px;
+		   text-shadow: 1px 2px 6px #fffbe7;
+		   margin: 24px 0;
 
 	</style>
 	
@@ -106,6 +123,21 @@
 			<p>[야훼이레] 288. 내 발을 씻기신 예수 </P>
 			<p>*하늘바라기 </P>
 			<iframe width="200" height="150" src="https://www.youtube.com/embed/W3ze81wbdUM?si=IVBvZKTZyRzqe_g_" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			
+			<p>*혼성 4부합창_시노디아</P>
+			<iframe width="200" height="150" src="https://www.youtube.com/embed/NC_XcVSvjtM?si=FCxWMQhCffVnR2XF" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			
+			<p>*갓등중창단-명동성당</P>
+			<iframe width="200" height="150" src="https://www.youtube.com/embed/AJMEgEbbJh0?si=wwNHY8uBwn6OVJAB" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			
+			<legend>부활</legend>
+			<p>[야훼이레] 856. 축제 </P>
+			<p>*갓등중창단 </P>
+	
+			<iframe width="200" height="150" src="https://www.youtube.com/embed/efCJVxN2ZhQ?si=fTdysWk85xgCQ4LF" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			
+			
+			
 			
 		</fieldset>
 		
